--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-vars-ponyfill": "^2.1.2",
     "detect-it": "^3.0.5",
     "inputmask": "^4.0.8",
+    "jump.js": "^1.0.2",
     "lazysizes": "^5.2.0",
     "moment": "^2.24.0",
     "object-fit-images": "^3.2.4",
